tests/compilefail25.pas
program compilefail25(output);
{program never ends}
begin
	writeln('hello world');

